--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Abel&family=Libre+Baskerville&family=Open+Sans:wght@300&display=swap");
+
 * {
     margin: 0px;
     padding: 0px;
 }
 
+body {
+    background-color: #355764;
+}
 .pagina-inicial {
     text-decoration: none;
     font-size: 1.4rem;
-    color: rgb(139, 134, 134);
+    color: rgb(168, 162, 162);
     padding: 5px;
     margin-left: 80px;
+    font-family: "Abel", sans-serif;
 }
 
 .cabecalho {
@@ -34,16 +40,18 @@
 
 .botao-suspenso,
 .login-texto {
-    color: rgb(139, 134, 134);
-    border: solid 2px rgb(139, 134, 134);
+    color: rgb(168, 162, 162);
+    border: solid 2px #7895cb;
     border-radius: 8px;
     padding: 8px;
     font-size: 1.4rem;
+    font-family: "Abel", sans-serif;
 }
 
 .login-texto {
     display: flex;
     justify-content: center;
+    font-family: "Abel", sans-serif;
 }
 
 .material-symbols-outlined {
@@ -69,6 +77,7 @@
     margin: 5px;
     border: solid 1px #7895cb;
     border-radius: 8px;
+    font-family: "Abel", sans-serif;
 }
 
 /* .itens-suspenso:hover,
@@ -96,16 +105,16 @@
 .titulo {
     font-size: 2rem;
     text-align: center;
-    margin: 20px 20px;
+    margin-top: 100px;
+    font-family: "Libre Baskerville", serif;
 }
 
 .container-principal {
     margin-top: 100px;
     display: flex;
-    background-color: #c5dff8;
     width: 100%;
     height: 300px;
-    justify-content: space-between;
+    justify-content: center;
     box-sizing: border-box;
 }
 
@@ -115,36 +124,14 @@
     text-align: left;
     display: inline-block;
     margin-left: 10px;
-    border: solid 2px black;
+    border: solid 2px #7895cb;
     line-height: 1.4em;
     font-size: 1.4em;
-    box-sizing: content-box;
-}
-
-.avaliacao {
-    width: 30%;
-    height: 100%;
-    border: solid 2px black;
-    margin: 0 100px;
     border-radius: 8px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
 }
 
-.avaliacao-titulo {
-    text-align: center;
-    margin: 20px 0px;
-}
-
-.avaliacao-texto {
-    margin-bottom: 20px;
-    line-height: 1.4em;
-    font-size: 20px;
-}
-
-.lista-itens {
-    display: flex;
-}
-
-.avaliacao-itens {
-    margin-left: 20px;
-    position: absolute;
+.textos p {
+    padding: 20px;
 }
